# dict-longdo

./: AUTHORS  COPYING  ChangeLog  Makefile.am  configure.in  longdo.info  longdo_de_th.txt  longdo_en_th.txt  longdo_fr_th.txt  longdo_jp_th.txt  longdo_others.txt
branches/ltn/: longdo_jp_th.txt
debian/: changelog  copyright  dirs  postinst  postrm
tags/r_20061015/: parse_longdo.awk
trunk/: ChangeLog  Makefile.am  configure.in  longdo_de_th.txt  longdo_en_th.c5  longdo_fr_th.txt  longdo_jp_th.txt  longdo_others.txt
trunk/debian/: changelog  control  copyright  postinst  rules
trunk/stardict/: Makefile.am
