dnl Process this file with autoconf to produce a configure script.
AC_INIT(parse_longdo.awk)
AM_INIT_AUTOMAKE(dict-longdo, `date +%Y%m%d`)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_ARG_WITH(dictdatadir,
    [AC_HELP_STRING([--with-dictdatadir=DIR],
                    [dictionary data directory in DIR [DATADIR]])],
    [dictdatadir="$withval"], [dictdatadir=\$\{datadir\}])

AC_SUBST(dictdatadir)

AC_ARG_WITH(stardictdatadir,
    [AC_HELP_STRING([--with-stardictdatadir=DIR],
                    [stardict data directory in DIR [PREFIX/share/stardict/dic]])],
    [stardictdatadir="$withval"], [stardictdatadir=\$\{prefix\}/share/stardict/dic])

AC_SUBST(stardictdatadir)

AC_PATH_PROG(DICTZIP, dictzip, no)
if test "x$DICTZIP" = "xno"; then
   AC_MSG_ERROR([dictzip is needed])
fi
AC_SUBST(DICTZIP)

AC_PATH_PROG(DICTFMT, dictfmt, no)
if test "x$DICTFMT" = "xno"; then
   AC_MSG_ERROR([dictfmt is needed])
fi
AC_SUBST(DICTFMT)

AC_PATH_PROG(TABFILE, tabfile, no, [/usr/lib/stardict-tools:/usr/local/lib/stardict-tools])
AM_CONDITIONAL(BUILD_STARDICT, test "x$TABFILE" != "xno")

AC_OUTPUT(	
	Makefile  \
	stardict/Makefile  \
)
